@@ -106,6 +106,10 @@ Remove an installed file system. This command removes the filesystem
 description but nothing is done on the various targets involved in
 the considered filesystem (no reformatting of freed target is done).
 .TP
+.B \fIconfig\fP -f <FSNAME>
+.sp
+Display filesystem component static information.
+.TP
 .B \fIformat\fP -f <FSNAME>
 .sp
 Format an installed filesystem.
