@@ -1,3 +1,6 @@
+2012-08-02 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Add new 'config' command (ticket #67).
+
 2012-08-01 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Network supports an optional '0' id (ticket #134).
 	* New shine CLI display with options (ticket #105).
